tests/NormalTests/paczka2/big_fuzzy/48212944.err
Error in line 9: nmqaOtcRI S231 6,9
Error in line 7: S614 S231 38,7
Error in line 63: CH6BtnhJ A182 38,4
Error in line 55: EdkNJBpUy2 S614 114,1
Error in line 70: nmqaOtcRI A182 11,56
Error in line 66: CH6BtnhJ S231 36,6
Error in line 58: is9ABHhg A818 27,1
Error in line 72: nmqaOtcRI S231 3,2
Error in line 68: wP0yREPyb8 S231 93,8
Error in line 74: is9ABHhg S231 165,4
Error in line 80: S614 A818 88,0
Error in line 82: S614 A182 33,1
Error in line 92: nmqaOtcRI S231 46,5
Error in line 95: CH6BtnhJ A182 67,7
Error in line 103: CH6BtnhJ S231 94,9
Error in line 99: CJIVad A182 44,0
Error in line 106: CJIVad A818 65,2
Error in line 109: CJIVad S614 78,7
Error in line 110: CJIVad A182 68,6
Error in line 90: wP0yREPyb8 S614 5,5
Error in line 115: wP0yREPyb8 S231 69,5
Error in line 125: is9ABHhg A182 53,88
Error in line 120: is9ABHhg S231 21,9
Error in line 129: EdkNJ)pUy2 S231 132,3
Error in line 117: EdkNJBpUy2 S231 56,3
Error in line 137: wP0yREPyb8 A182 84,7
Error in line 143: CH6BtnhJ A182 47,3
Error in line 145: CJIVad S614 2,4
Error in line 158: CJIVad S614 20,7
Error in line 159: CJIVad S231 17,1
Error in line 163: is9ABHhg A818 26,7
Error in line 165: CH6BtnhJ S231 42,4
Error in line 172: CJIVad S231 64,7
Error in line 174: CJIVad A818 28,4
Error in line 168: is9ABHhg A182 62,5
Error in line 176: is9ABHhg S614 28,4
Error in line 179: nmqaOtcRI S231 55,0
Error in line 188: is9ABHhg S231 14,9
Error in line 195: is9ABHhg A818 43,0
Error in line 169: S614 S614 53,9
Error in line 199: wP0yREPyb8 S614 48,0
Error in line 213: wP0yREPyb8 A182 62,2
Error in line 211: CH6BtnhJ A182 93,1
Error in line 214: is9ABHhg A818 600,7
Error in line 223: wP0yREPyb8 S614 51,0
Error in line 224: CJIVad A818 86,4
Error in line 241: wP0yREPyb8 A818 49,2
Error in line 243: CJIVad S231 299,6
Error in line 240: S614 S614 68,5
